deploy: 6311050ed76e9ffac441a3b88ea04cd9feabed4c

--- a/others/federation.html
+++ b/others/federation.html
@@ -193,8 +193,8 @@
 <ul>
 <li><a href="https://codeberg.org/fediverse/fep/src/branch/main/fep/67ff/fep-67ff.md">FEP-67ff: FEDERATION.md</a></li>
 <li><a href="https://codeberg.org/fediverse/fep/src/branch/main/fep/f1d5/fep-f1d5.md">FEP-f1d5: NodeInfo in Fediverse Software</a></li>
+<li><a href="https://codeberg.org/fediverse/fep/src/branch/main/fep/fffd/fep-fffd.md">FEP-fffd: Proxy Objects</a></li>
 </ul>
-<!-- - [FEP-fffd: Proxy Objects](https://codeberg.org/fediverse/fep/src/branch/main/fep/fffd/fep-fffd.md) -->
 <h2 id="activitypub"><a class="header" href="#activitypub">ActivityPub</a></h2>
 <p>The following activities and object types are supported:</p>
 <ul>
@@ -208,6 +208,10 @@
 <h3 id="notable-differences"><a class="header" href="#notable-differences">Notable differences</a></h3>
 <ul>
 <li>No shared inbox.</li>
+</ul>
+<h2 id="additional-documentation"><a class="header" href="#additional-documentation">Additional documentation</a></h2>
+<ul>
+<li><a href="https://hatsu.cli.rs">Hatsu Documentation</a></li>
 </ul>
 
                     </main>
