--- a/print.html
+++ b/print.html
@@ -758,8 +758,8 @@ which caches dependencies to avoid duplicate build dependencies.</p>
 <ul>
 <li><a href="https://codeberg.org/fediverse/fep/src/branch/main/fep/67ff/fep-67ff.md">FEP-67ff: FEDERATION.md</a></li>
 <li><a href="https://codeberg.org/fediverse/fep/src/branch/main/fep/f1d5/fep-f1d5.md">FEP-f1d5: NodeInfo in Fediverse Software</a></li>
+<li><a href="https://codeberg.org/fediverse/fep/src/branch/main/fep/fffd/fep-fffd.md">FEP-fffd: Proxy Objects</a></li>
 </ul>
-<!-- - [FEP-fffd: Proxy Objects](https://codeberg.org/fediverse/fep/src/branch/main/fep/fffd/fep-fffd.md) -->
 <h2 id="activitypub"><a class="header" href="#activitypub">ActivityPub</a></h2>
 <p>The following activities and object types are supported:</p>
 <ul>
@@ -773,6 +773,10 @@ which caches dependencies to avoid duplicate build dependencies.</p>
 <h3 id="notable-differences"><a class="header" href="#notable-differences">Notable differences</a></h3>
 <ul>
 <li>No shared inbox.</li>
+</ul>
+<h2 id="additional-documentation"><a class="header" href="#additional-documentation">Additional documentation</a></h2>
+<ul>
+<li><a href="https://hatsu.cli.rs">Hatsu Documentation</a></li>
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="hatsu-json-feed-extension"><a class="header" href="#hatsu-json-feed-extension">Hatsu JSON Feed Extension</a></h1>
 <p>To allow you to customize your postings, Hatsu defines a JSON Feed extension that uses the <code>_hatsu</code> key.</p>
