--- a/users/redirecting.html
+++ b/users/redirecting.html
@@ -194,7 +194,7 @@
 <p>Requests accept of type <code>application/activity+json</code>, redirecting them to make your page searchable.</p>
 <ul>
 <li>before: <code>https://example.com/foo/bar</code></li>
-<li>after: <code>https://hatsu.local/o/https://example.com/foo/bar</code></li>
+<li>after: <code>https://hatsu.local/posts/https://example.com/foo/bar</code></li>
 </ul>
 </li>
 </ol>
