deploy: c7942bfdd206460b2dbc250b0acd7bfc50113d22

--- a/admins/create-account.html
+++ b/admins/create-account.html
@@ -191,9 +191,9 @@
 </code></pre>
 <h2 id="curl"><a class="header" href="#curl">curl</a></h2>
 <p>You can also access the API via curl, as <code>Justfile</code> does.</p>
-<pre><code class="language-bash">curl -X POST &quot;http://localhost:$(echo $HATSU_LISTEN_PORT)/api/v0/admin/create-account?token=$(echo $HATSU_ACCESS_TOKEN)&quot; \
-  -H &quot;Content-Type: application/json&quot; \
-  -d &quot;{\&quot;name\&quot;: \&quot;example.com\&quot;}&quot;
+<pre><code class="language-bash">curl -X POST "http://localhost:$(echo $HATSU_LISTEN_PORT)/api/v0/admin/create-account?token=$(echo $HATSU_ACCESS_TOKEN)" \
+  -H "Content-Type: application/json" \
+  -d "{\"name\": \"example.com\"}"
 </code></pre>
 
                     </main>
