--- a/admins/environments.html
+++ b/admins/environments.html
@@ -224,7 +224,7 @@
 <p>For accessing Admin API.</p>
 <p>If this value is not set, the Hatsu Admin API will not be available.</p>
 <p>This can be any string, but I recommend generating a random uuid v4.</p>
-<pre><code class="language-bash">echo &quot;\nHATSU_ACCESS_TOKEN = \&quot;$(cat /proc/sys/kernel/random/uuid)\&quot;&quot; &gt;&gt; .env
+<pre><code class="language-bash">echo "\nHATSU_ACCESS_TOKEN = \"$(cat /proc/sys/kernel/random/uuid)\"" &gt;&gt; .env
 </code></pre>
 
                     </main>
