--- a/others/federation.html
+++ b/others/federation.html
@@ -204,7 +204,8 @@
 <!-- - `Create(Note)`, `Update(Note)`, `Delete(Note)` -->
 <!-- - `Like(Note)`, `Undo(Like)` -->
 <!-- - `Announce(Note)`, `Undo(Announce)` -->
-<p>Activities are implemented in way that is compatible with Mastodon and other popular ActivityPub servers.</p>
+<p>Activities are implemented in way that is compatible with Mastodon and other
+popular ActivityPub servers.</p>
 <h3 id="notable-differences"><a class="header" href="#notable-differences">Notable differences</a></h3>
 <ul>
 <li>No shared inbox.</li>
