--- a/users/feed.html
+++ b/users/feed.html
@@ -186,9 +186,9 @@
 <pre><code class="language-html">&lt;html&gt;
     &lt;head&gt;
         ...
-        &lt;link rel=&quot;alternate&quot; type=&quot;application/feed+json&quot; href=&quot;https://example.com/feed.json&quot; /&gt;
-        &lt;link rel=&quot;alternate&quot; type=&quot;application/atom+xml&quot; href=&quot;https://example.com/atom.xml&quot; /&gt;
-        &lt;link rel=&quot;alternate&quot; type=&quot;application/rss+xml&quot; href=&quot;https://example.com/rss.xml&quot; /&gt;
+        &lt;link rel="alternate" type="application/feed+json" href="https://example.com/feed.json" /&gt;
+        &lt;link rel="alternate" type="application/atom+xml" href="https://example.com/atom.xml" /&gt;
+        &lt;link rel="alternate" type="application/rss+xml" href="https://example.com/rss.xml" /&gt;
     &lt;/head&gt;
     &lt;body&gt;
         ...
@@ -208,11 +208,11 @@ foo/bar =&gt; https://example.com/foo/bar
 </code></pre>
 <p>Ideally, your <code>item.id</code> and <code>item.url</code> should be consistent absolute links:</p>
 <pre><code class="language-json">{
-	&quot;id&quot;: &quot;https://example.com/foo/bar&quot;,
-    &quot;url&quot;: &quot;https://example.com/foo/bar&quot;,
-	&quot;title&quot;: &quot;...&quot;,
-	&quot;content_html&quot;: &quot;...&quot;,
-	&quot;date_published&quot;: &quot;...&quot;
+	"id": "https://example.com/foo/bar",
+    "url": "https://example.com/foo/bar",
+	"title": "...",
+	"content_html": "...",
+	"date_published": "..."
 }
 </code></pre>
 <h3 id="json-feed-extension"><a class="header" href="#json-feed-extension">JSON Feed Extension</a></h3>
