--- a/users/redirecting-with-static-files-and-markup.html
+++ b/users/redirecting-with-static-files-and-markup.html
@@ -214,7 +214,7 @@ which you need to save to the SSG equivalent of the static files directory and m
 <blockquote>
 <p>Replace <code>hatsu.local</code> with your Hatsu instance.</p>
 </blockquote>
-<pre><code class="language-html">&lt;link rel=&quot;alternate&quot; type=&quot;application/activity+json&quot; href=&quot;https://hatsu.local/posts/https://example.com/foo/bar&quot; /&gt;
+<pre><code class="language-html">&lt;link rel="alternate" type="application/activity+json" href="https://hatsu.local/posts/https://example.com/foo/bar" /&gt;
 </code></pre>
 
                     </main>
