--- a/others/federation.html
+++ b/others/federation.html
@@ -197,6 +197,13 @@
 </ul>
 <h2 id="activitypub"><a class="header" href="#activitypub">ActivityPub</a></h2>
 <p>The following activities and object types are supported:</p>
+<h3 id="send"><a class="header" href="#send">Send</a></h3>
+<ul>
+<li><code>Accept(Follow)</code></li>
+<li><code>Create(Note)</code></li>
+</ul>
+<!-- - `Create(Note)`, `Update(Note)`, `Delete(Note)` -->
+<h3 id="receive"><a class="header" href="#receive">Receive</a></h3>
 <ul>
 <li><code>Follow(Actor)</code>, <code>Undo(Follow)</code></li>
 <li><code>Create(Note)</code></li>
