--- a/print.html
+++ b/print.html
@@ -762,6 +762,13 @@ which caches dependencies to avoid duplicate build dependencies.</p>
 </ul>
 <h2 id="activitypub"><a class="header" href="#activitypub">ActivityPub</a></h2>
 <p>The following activities and object types are supported:</p>
+<h3 id="send-1"><a class="header" href="#send-1">Send</a></h3>
+<ul>
+<li><code>Accept(Follow)</code></li>
+<li><code>Create(Note)</code></li>
+</ul>
+<!-- - `Create(Note)`, `Update(Note)`, `Delete(Note)` -->
+<h3 id="receive-1"><a class="header" href="#receive-1">Receive</a></h3>
 <ul>
 <li><code>Follow(Actor)</code>, <code>Undo(Follow)</code></li>
 <li><code>Create(Note)</code></li>
