deploy: 513729544ed13c79bb91eb6711b2f0a447ac0000

--- a/admins/environments.html
+++ b/admins/environments.html
@@ -184,7 +184,7 @@
 <p>Hatsu supports dotenv, and you can set environment variables via the <code>.env</code> file.</p>
 <p>It is required unless it has a suffix (optional).</p>
 <p>However, it may exist as a built-in preset (in the source code) or an example preset (in <a href="https://github.com/importantimport/hatsu/blob/main/.env.example"><code>.env.example</code></a>)</p>
-<h2 id="database_url"><a class="header" href="#database_url">DATABASE_URL</a></h2>
+<h2 id="hatsu_database_url"><a class="header" href="#hatsu_database_url">HATSU_DATABASE_URL</a></h2>
 <ul>
 <li>default: <code>sqlite::memory:</code></li>
 <li>example: <code>sqlite://hatsu.sqlite3</code></li>
