--- a/print.html
+++ b/print.html
@@ -569,7 +569,7 @@ const url = new URL(`/api/v1/statuses/${id}/context`, origin)
   --restart unless-stopped \
   -p 3939:3939 \
   -v /opt/hatsu/hatsu.sqlite3:/app/hatsu.sqlite3 \
-  -e DATABASE_URL=sqlite://hatsu.sqlite3 \
+  -e HATSU_DATABASE_URL=sqlite://hatsu.sqlite3 \
   -e HATSU_DOMAIN={{hatsu-instance-domain}} \
   -e HATSU_LISTEN_HOST=0.0.0.0 \
   -e HATSU_PRIMARY_ACCOUNT={{your-static-site}} \
@@ -590,7 +590,7 @@ const url = new URL(`/api/v1/statuses/${id}/context`, origin)
 <p>Hatsu supports dotenv, and you can set environment variables via the <code>.env</code> file.</p>
 <p>It is required unless it has a suffix (optional).</p>
 <p>However, it may exist as a built-in preset (in the source code) or an example preset (in <a href="https://github.com/importantimport/hatsu/blob/main/.env.example"><code>.env.example</code></a>)</p>
-<h2 id="database_url"><a class="header" href="#database_url">DATABASE_URL</a></h2>
+<h2 id="hatsu_database_url"><a class="header" href="#hatsu_database_url">HATSU_DATABASE_URL</a></h2>
 <ul>
 <li>default: <code>sqlite::memory:</code></li>
 <li>example: <code>sqlite://hatsu.sqlite3</code></li>
