--- a/admins/environments.html
+++ b/admins/environments.html
@@ -226,6 +226,18 @@
 <p>This can be any string, but I recommend generating a random uuid v4.</p>
 <pre><code class="language-bash">echo "\nHATSU_ACCESS_TOKEN = \"$(cat /proc/sys/kernel/random/uuid)\"" &gt;&gt; .env
 </code></pre>
+<h2 id="hatsu_node_name-optional"><a class="header" href="#hatsu_node_name-optional">HATSU_NODE_NAME (optional)</a></h2>
+<ul>
+<li>default: None</li>
+<li>example: None</li>
+</ul>
+<p>Used for NodeInfo <code>metadata.nodeName</code>.</p>
+<h2 id="hatsu_node_description-optional"><a class="header" href="#hatsu_node_description-optional">HATSU_NODE_DESCRIPTION (optional)</a></h2>
+<ul>
+<li>default: None</li>
+<li>example: None</li>
+</ul>
+<p>Used for NodeInfo <code>metadata.nodeDescription</code>.</p>
 
                     </main>
 
