deploy: 71f4ff1250083219bc5a93edeb94b2cdcaf21a01

--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
 <ul>
 <li>Hatsu uses Feed (JSON / Atom / RSS) as a data source instead of HTML pages with microformats2.</li>
 <li>Hatsu doesn't require you to automatically or manually send Webmention reminders for create and update, it's all fully automated.</li>
+<li>Hatsu is ActivityPub only, which means it doesn't handle Nostr, AT Protocol (Bluesky) or other protocols.</li>
 </ul>
 <p>If you don't want to self-host, you may still want to use Bridgy Fed or Bridgy in some cases:</p>
 <h3 id="bridgy-fed"><a class="header" href="#bridgy-fed">Bridgy Fed</a></h3>
