--- a/print.html
+++ b/print.html
@@ -193,6 +193,7 @@
 <ul>
 <li>Hatsu uses Feed (JSON / Atom / RSS) as a data source instead of HTML pages with microformats2.</li>
 <li>Hatsu doesn't require you to automatically or manually send Webmention reminders for create and update, it's all fully automated.</li>
+<li>Hatsu is ActivityPub only, which means it doesn't handle Nostr, AT Protocol (Bluesky) or other protocols.</li>
 </ul>
 <p>If you don't want to self-host, you may still want to use Bridgy Fed or Bridgy in some cases:</p>
 <h3 id="bridgy-fed"><a class="header" href="#bridgy-fed">Bridgy Fed</a></h3>
@@ -573,7 +574,7 @@ const url = new URL(`/api/v1/statuses/${id}/context`, origin)
   -e HATSU_DOMAIN={{hatsu-instance-domain}} \
   -e HATSU_LISTEN_HOST=0.0.0.0 \
   -e HATSU_PRIMARY_ACCOUNT={{your-static-site}} \
-  -e HATSU_ACCESS_TOKEN=edc7e5a7-f2ce-44a6-a57e-b7706503f642 \
+  -e HATSU_ACCESS_TOKEN=123e4567-e89b-12d3-a456-426614174000 \
   ghcr.io/importantimport/hatsu:nightly
 </code></pre>
 <p>You need to specify all environment variables at once. For more information, see <a href="admins/./environments.html">Environments</a>.</p>
