--- a/admins/install-binary.html
+++ b/admins/install-binary.html
@@ -186,7 +186,7 @@
 <h2 id="nightly"><a class="header" href="#nightly">Nightly</a></h2>
 <p>Hatsu provides nightly Binary builds.</p>
 <p>Please note that it is unstable and may contain breaking changes.</p>
-<p>You can find the latest artifacts on the <a href="https://github.com/importantimport/hatsu/actions/workflows/nightly.yml">Workflow runs page</a> (containing <code>x86_64-unknown-linux-gnu</code> and <code>aarch64-unknown-linux-gnu</code>).</p>
+<p>You can find the latest artifacts on the <a href="https://github.com/importantimport/hatsu/actions/workflows/nightly.yml">Workflow runs page</a> (containing <code>{x86_64,aarch64}-unknown-linux-{gnu,musl}</code>).</p>
 <p>GitHub has a document that tells you how to download artifact: <a href="https://docs.github.com/en/actions/managing-workflow-runs/downloading-workflow-artifacts">https://docs.github.com/en/actions/managing-workflow-runs/downloading-workflow-artifacts</a></p>
 
                     </main>
