--- a/admins/install-docker.html
+++ b/admins/install-docker.html
@@ -181,14 +181,12 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="docker-installation"><a class="header" href="#docker-installation">Docker Installation</a></h1>
-<h2 id="stable"><a class="header" href="#stable">Stable</a></h2>
-<p>Doesn't have a stable version yet.</p>
-<h2 id="nightly"><a class="header" href="#nightly">Nightly</a></h2>
-<p>Hatsu provides nightly Docker image builds.</p>
-<p>Please note that it is unstable and may contain breaking changes.</p>
-<pre><code class="language-bash">docker pull ghcr.io/importantimport/hatsu:nightly
-</code></pre>
-<p>Run with <code>docker run</code>:</p>
+<p>You can find images on GitHub: https://github.com/importantimport/hatsu/pkgs/container/hatsu</p>
+<p>Hatsu uses three primary tags: <code>latest</code> (stable), <code>beta</code> and <code>nightly</code>, literally.</p>
+<h2 id="docker-run"><a class="header" href="#docker-run">docker run</a></h2>
+<blockquote>
+<p>Replace <code>{{version}}</code> with the version you want to use.</p>
+</blockquote>
 <pre><code class="language-bash">docker run -d \
   --name hatsu \
   --restart unless-stopped \
@@ -199,10 +197,12 @@
   -e HATSU_LISTEN_HOST=0.0.0.0 \
   -e HATSU_PRIMARY_ACCOUNT={{your-static-site}} \
   -e HATSU_ACCESS_TOKEN=123e4567-e89b-12d3-a456-426614174000 \
-  ghcr.io/importantimport/hatsu:nightly
+  ghcr.io/importantimport/hatsu:{{version}}
 </code></pre>
 <p>You need to specify all environment variables at once. For more information, see <a href="./environments.html">Environments</a>.</p>
-<!-- You can also use the docker-compose example in examples. (TODO) -->
+<h2 id="docker-compose"><a class="header" href="#docker-compose">docker compose</a></h2>
+<p>The <a href="https://github.com/importantimport/hatsu/tree/main/examples">examples</a> folder contains some sample docker compose configurations,</p>
+<p>You can make your own modifications based on them.</p>
 
                     </main>
 
