deploy: cf8ad9e5f4b653cff5c5cbf29fb3e0e543c4998d

--- a/admins/install-docker.html
+++ b/admins/install-docker.html
@@ -181,7 +181,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="docker-installation"><a class="header" href="#docker-installation">Docker Installation</a></h1>
-<p>You can find images on GitHub: https://github.com/importantimport/hatsu/pkgs/container/hatsu</p>
+<p>You can find images on GitHub: <a href="https://github.com/importantimport/hatsu/pkgs/container/hatsu">https://github.com/importantimport/hatsu/pkgs/container/hatsu</a></p>
 <p>Hatsu uses three primary tags: <code>latest</code> (stable), <code>beta</code> and <code>nightly</code>, literally.</p>
 <h2 id="docker-run"><a class="header" href="#docker-run">docker run</a></h2>
 <blockquote>
