--- a/print.html
+++ b/print.html
@@ -557,7 +557,7 @@ const url = new URL(`/api/v1/statuses/${id}/context`, origin)
 <p>TODO</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="install"><a class="header" href="#install">Install</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="docker-installation"><a class="header" href="#docker-installation">Docker Installation</a></h1>
-<p>You can find images on GitHub: https://github.com/importantimport/hatsu/pkgs/container/hatsu</p>
+<p>You can find images on GitHub: <a href="https://github.com/importantimport/hatsu/pkgs/container/hatsu">https://github.com/importantimport/hatsu/pkgs/container/hatsu</a></p>
 <p>Hatsu uses three primary tags: <code>latest</code> (stable), <code>beta</code> and <code>nightly</code>, literally.</p>
 <h2 id="docker-run"><a class="header" href="#docker-run">docker run</a></h2>
 <blockquote>
