deploy: 137f685b36313fafc98e8b4d224137cff699734e

--- a/others/federation.html
+++ b/others/federation.html
@@ -195,6 +195,7 @@
 <li><a href="https://codeberg.org/fediverse/fep/src/branch/main/fep/f1d5/fep-f1d5.md">FEP-f1d5: NodeInfo in Fediverse Software</a></li>
 <li><a href="https://codeberg.org/fediverse/fep/src/branch/main/fep/fffd/fep-fffd.md">FEP-fffd: Proxy Objects</a></li>
 <li><a href="https://codeberg.org/fediverse/fep/src/branch/main/fep/4adb/fep-4adb.md">FEP-4adb: Dereferencing identifiers with webfinger</a></li>
+<li><a href="https://codeberg.org/fediverse/fep/src/branch/main/fep/2c59/fep-2c59.md">FEP-2c59: Discovery of a Webfinger address from an ActivityPub actor</a></li>
 </ul>
 <h2 id="activitypub"><a class="header" href="#activitypub">ActivityPub</a></h2>
 <p>The following activities and object types are supported:</p>
